2003-11-22  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/machine.s: New.
	* gas/ppc/machine.d: New.
	* gas/ppc/ppc.exp: Run it.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/lca-svr4pic.d: New test for the "lca" macro.
	* gas/mips/lca-xgot.d: Likewise.
	* gas/mips/lca.s: Source for the new tests.
	* gas/mips/mips.exp: Run the new tests.

2003-11-14  Nick Clifton  <nickc@redhat.com>

	* gas/arm/arm7.d: Pass -D instead of -d to objdump in order to
        display the contents of data fields in the .text section.
        This change is necessary after the addition of arm elf mapping
        symbol support to gas.
        * gas/arm/pic.d: Expect addresses with function name offsets.
        This change is necessary after the addition of arm elf mapping
        symbol support to gas.
        
2003-11-13  Nick Clifton  <nickc@redhat.com>

	* gas/arm/mapping.s: New test: Source for ARM ELF mapping
	symbols test.
	* gas/arm/mapping.d: New file: Expected output.
	* gas/arm/arm.exp: Run new test.

2003-11-06  Nick Clifton  <nickc@redhat.com>

	* gas/arm/req.s: New test file.  Check .req and .unreq psuedo ops.
	* gas/arm/req.l: Expected error output from req.s test.
	* gas/arm/copro.d: Set target architecture for objdump so that the
	test will work on architectures which cannot encode higher arm
	architecture types in their file headers.
	* gas/arm/arm.exp: Run new req.s test.
	Skip thumb instruction test for PE targets which do not support
	thumb relocations.
	* gas/elf/elf.exp: Skip special handling of section2 test for
	XScale targets - it is no longer needed.

2003-11-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/m68k/mcf-mov3q.d: Support 64bit BFD.

2003-11-03  Daniel Jacobowitz  <drow@mvista.com>

	* gas/arm/arm7t.d: Replace '-#' with '#-'.
	* gas/arm/copro.d: Likewise.
	* gas/arm/fpa-mem.d: Likewise.
	* gas/arm/maverick.c: Likewise.
	* gas/arm/maverick.d: Likewise.
	* gas/arm/vfp1.d: Likewise.
	* gas/arm/vfp1xD.d: Likewise.